assets/css/base.css
@font-face {
  font-family: "Authentic Regular";
  src: url("/assets/css/fonts/AUTHENTICSans-60.woff2") format("woff2"),
       url("/assets/css/fonts/AUTHENTICSans-60.woff") format("woff"),
       url("/assets/css/fonts/AUTHENTICSans-60.otf") format("opentype");
  font-style: normal;
  font-weight: normal;
}

@font-face {
  font-family: "Authentic Semi Bold";
  src: url("/assets/css/fonts/AUTHENTICSans-90.woff2") format("woff2"),
       url("/assets/css/fonts/AUTHENTICSans-90.woff") format("woff"),
       url("/assets/css/fonts/AUTHENTICSans-90.otf") format("opentype");
  font-style: normal;
  font-weight: 600;
}

@font-face {
  font-family: "Authentic Bold";
  src: url("/assets/css/fonts/AUTHENTICSans-130.woff2") format("woff2"),
       url("/assets/css/fonts/AUTHENTICSans-130.woff") format("woff"),
       url("/assets/css/fonts/AUTHENTICSans-130.otf") format("opentype");
  font-style: normal;
  font-weight: 700;
}

:root {

  /* colors */
  --back: white;
  --fore: black;
  --accent: rgb(222, 199, 227, 0.6);
  --grid: rgb(12, 206, 255);

  /* fonts */
  /* --title: 'title', 'Times New Roman', Times, serif; */
  --title: 'title', 'Authentic Bold', Arial, Helvetica, sans-serif;
  --body: 'body', 'Authentic Semi Bold', Arial, Helvetica, sans-serif;
  --comments: 'comments', 'Courier New', Courier, monospace;
  --footnotes: 'footnotes', 'Authentic Bold', Arial, Helvetica, sans-serif;

  /* borders */
  --thin: 0.25px solid;
  --gridline: var(--thin) var(--grid);
  --gridshadow: 0 0 0 1px var(--grid);

  /* speeds */
  --fast: 100ms;

  /* timing functions */
  --linear: linear;

  /* math */
  --radical2: 1.41421356;

  /* default mesaurements */
  --header-height: calc( 5rem );
  --header-child-collapsed-width: var(--header-height);
  --header-child-expanded-width: calc(  var(--main-width) - var(--header-height) );
  --main-width: min( 100vw, 50rem );
  --side-width: min( 100%, 15rem );

  --form-base-height: 2.5rem;
  --form-base-width: 6rem;
  --form-expanded-height: 8rem;
  --form-expanded-width: var(--side-width);

}

/* Accessibility media queries */

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation: none !important;
    transition: none !important;
    opacity: unset !important;
  }
}

@media (prefers-contrast: more) {
  :root {
    --back: white;
    --fore: black;
  }
  *:focus {
    outline: 0.5rem solid;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --back: black;
    --fore: white;
  }
}


/* browser support coming soon */
/* https://drafts.csswg.org/mediaqueries-5/#mf-user-preferences */

@media (inverted-colors: inverted) { }
@media (prefers-reduced-data: no-preference) { }
@media (prefers-reduced-transparency: reduce) { }


/* saving myself a lot of headaches */

*,
*::before,
*::after {
  box-sizing: border-box;
  position: relative;
}

/* *:focus { */
/*   outline-color: var(--accent); */
/*   outline-offset: 3px; */
/*   outline-style: solid; */
/*   outline-width: 2px; */
/* } */

img {
  max-width: 100%;
}

a,
a:hover,
a:active {
  color: rgba(0,0,0,1);
  /* text-decoration: none; */
  /* border-bottom: 1px solid; */
}
a:visited {
  color: rgba(0,0,0,0.5);
}

a:hover,
a:active {
  /* text-decoration-style: wavy; */
  text-decoration-thickness: 2px;
}


html, body {
  margin: 0;
  padding: 0;
  background-color: var(--back);
  color: var(--fore);
  font-family: 'Authentic Regular';
  font-size: 0.9rem;
  scroll-behavior: smooth;
}

input, select, button {
    font-size: 0.75rem;
}

body {
  counter-reset: footnote;
}

b, strong {
    font-family: 'Authentic Bold';
}

/* header */

header {
  display: flex;
  align-items: center;
  height: calc( 2px + var(--header-height) );
  border-bottom: var(--thin);
  z-index: 1;
  background-color: var(--back);
  font-size: 1rem;
  max-width: 100vw;
  /* position: sticky;
  top: 0; */
  border-bottom: var(--gridline);
}


header a.skip-to-main {
  z-index: 1;
  --header-child-collapsed-width: 0;
  --header-child-expanded-width: calc(  var(--main-width) - var(--header-height) );
}

header nav {

}
header nav ul {
  display: flex;
  list-style: none;
  padding: 1rem;
  margin: 0;
  gap: 1rem;
  overflow: hidden;
  border-radius: inherit;
}

header nav ul li {
  height: 100%;
  align-items: center;
  border-radius: inherit;
}

header a {
  height: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: var(--fore);
  border-radius: inherit;
}

header form {
  width: 100%;
}
header form input[type="search"] {
  width : inherit;
  height: inherit;
  background-color: inherit;
  border-radius: inherit;
  border: unset;
  padding: inherit;
  font-size: inherit;
  padding-inline: 1rem;
}

header form input[type="search"]:focus-within {
  outline: none;
}


header form input[type="submit"] {
  display: none;
}

header .title {
  display: flex;
  align-items: center;
  padding-inline: 1rem;
  border-radius: var( --header-height );
}

header .title a {
  text-decoration: none;
  font-size: 1.5rem;
  font-weight: lighter;
  text-transform: lowercase;
}






header .collapsible {
  /* width: 100%; */
  height: 100%;
  max-width: var(--header-child-collapsed-width);
  /* overflow: hidden; */
  transition:
    max-width var(--fast) var(--linear),
    padding var(--fast) var(--linear),
    border var(--fast) var(--linear)
  ;
  display: flex;
  align-items: center;
  border-radius: var( --header-height );
  border: var(--thin) transparent;

}

header nav.collapsible {
  margin-right: auto;
}

header form.collapsible {
  margin-left: auto;
}

header nav.collapsible::after,
header form.collapsible::after {
  border: var(--thin);
  content: '';
  position: absolute;
  top: -0.25px; right: 0;
  height: var( --header-height );
  width: var( --header-height );
  background-color: var(--back);
  /* M0,0 L1,0 M0,0.5 L1,0.5 M0,1 L1,1 */
  border-radius: var( --header-height );
  display: flex;
  align-items: center;
  justify-content: center;
  transition: opacity var(--fast) var(--linear);
}

header nav.collapsible::after {
  /* content: '≡'; */
  /* content: ''; */
  /* padding-top: 0.25rem; */
  /* font-size: 4rem; */
  /* font-weight: 100; */
}

header form.collapsible::after {
  pointer-events: none;
}

header nav.collapsible::before {
  content: '';
  position: absolute;
  bottom: 0; right: 0;
  background-image:  url( ../images/menu.svg );
  background-size: cover;
  /* url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23cc3f47' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23b3373e' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23c8364e' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23b02f44' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23c22f55' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23ab294b' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23bb285c' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23a52351' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23b32362' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%239f1f57' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23aa2068' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23971c5d' points='943 900 1210 900 971 687'/%3E%3C/svg%3E"); */
  width: 100%;
  height: 100%;
  z-index: 1;
  pointer-events: none;
}

header form.collapsible::before {
  content: '';
  position: absolute;
  bottom: 0; right: 0;
  /* https://math.stackexchange.com/questions/377234/circle-in-square-calculate-distance-from-squares-corner-to-circles-perimeter */
  --length: calc( 0.5 * var(--header-height) * ( var(--radical2) - 1 )  );
  width: var(--length); height:0;
  rotate: 45deg;
  transform-origin: bottom right;
  border-top: var(--thin);
  background-color: red;
}

header .collapsible.expanded,
header .collapsible:focus-within {
  padding-inline: 1rem;
  border: var(--thin);
  max-width: var(--header-child-expanded-width);
}

header form.collapsible.expanded,
header form.collapsible:focus-within {
  padding-inline: unset;
}`

header form.collapsible.expanded input[type="search"],
header form.collapsible:focus-within input[type="search"] {
}

header nav.collapsible.expanded::after,
header form.collapsible.expanded::after,
header nav.collapsible:focus-within::after,
header form.collapsible:focus-within::after {
  opacity: 0;
  border: unset;
  pointer-events: none;
}

.bgc-accent {
    background-color: var(--accent);
}


/* displaying stats */

.stats,
.stats input,
.stats button,
.stats select {
  font-size: 0.75rem;
  padding: 0 0 1rem 0;
}

.stats p {
    margin: 0;
    padding-bottom: 0.25rem;
    font-family: 'Authentic Bold';
}

/* Click2Copy anchors */

a.click-copy {
  display: inline-block;
  text-decoration: none;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
  border-radius: 100%;
  border: var( --gridline );
  background-color: var(--back);
  color: var( --accent );
  width: 2rem; height: 2rem;
}

a.click-copy::after {
  content: "Click to copy link to block";
  display: none;
  position: absolute;
  right: -2.5rem;
  top: 0.5rem;
  width: 100%;
  overflow: visible;
  white-space: pre;
  font-size: 0.75rem;
}




a.click-copy:hover::after {
  display: block;
}

a.click-copy:active::after {
  content: "Copied!";
}

ul.article-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
}

 ul.article-list li {
  flex-basis: calc( ( 100% - 2rem ) / 3 );
  min-width: 24rem;
}




/* Article List  */

ul.article-list {
  box-sizing: border-box;
  list-style: none;
  margin: 0rem;
  padding: 1rem;
}

ul.article-list li {
}

a.article-link {
  --gridshadow: 0 0 0 1px var(--grid);
  text-align: center;
  padding: 0.5rem;
  display: block;
  text-decoration: none;
  color: var(--fore);
  background-color: var(--back);
  box-shadow: var(--gridshadow);
}

a.article-link h1 {
  font-size: 3rem;
  margin-block: 0;
  margin-inline: 1rem;
  font-family: var(--title);
  color: var(--fore);
  word-break: break-all;
}

a.article-link img {
  width: 100%;
}

a.article-link .article-authors {
  padding: 1rem 0;
}


@media screen and (max-width: 600px) {

  ul.article-list {
   margin: 0.5rem;
   display: block;
   padding: 0;
 }

  ul.article-list li {
   margin-bottom: 0.5rem;
 }

}

@media screen and (min-width: 600px) {
    html, body {
        font-size: 16px;
    }

    input, select, button {
        font-size: 0.9rem;
    }

    header {
        font-size: 1.5rem;
        /* border: 1px solid black;

        border:var(--gridline); */

    }
    .default header,
    .article header {
      animation: change_width var(--fast) ease forwards;
    }

    @keyframes change_width {
      from {
        max-width: 100vw;
        margin-left: 0rem;
      }
      to {
        max-width:  var(--main-width);
        margin-left: 14rem;
      }
    }


    header .title a {
        font-size: 3rem;
    }

}

@media print {

  header,
  aside,
  .notes,
  .view-comment-options-wrapper
  {
    display: none;
  }

  main {
    padding: 1rem;
  }

}


.query_display {
  margin: 2rem 10rem;
  font-size: 2rem;
}

